// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches default snapshot 1`] = `
<View>
  <View
    style={
      Object {
        "backgroundColor": "#FFF",
        "left": 25,
        "padding": 5,
        "position": "absolute",
        "top": -5,
        "zIndex": 50,
      }
    }
  >
    <Text />
  </View>
  <TextInput
    allowFontScaling={true}
    borderRadius={5}
    multiline={true}
    rejectResponderTermination={true}
    style={
      Array [
        Object {
          "borderRadius": 5,
          "borderWidth": 2,
          "justifyContent": "flex-end",
          "marginBottom": 10,
          "marginLeft": 10,
          "marginRight": 10,
          "marginTop": 10,
          "paddingBottom": 10,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 10,
        },
        Object {
          "borderColor": "#FFD14A",
          "borderWidth": 2,
          "height": 45,
          "textAlign": "left",
        },
      ]
    }
    underlineColorAndroid="transparent"
  />
</View>
`;

exports[`matches height snapshot 1`] = `
<View>
  <View
    style={
      Object {
        "backgroundColor": "#FFF",
        "left": 25,
        "padding": 5,
        "position": "absolute",
        "top": -5,
        "zIndex": 50,
      }
    }
  >
    <Text />
  </View>
  <TextInput
    allowFontScaling={true}
    borderRadius={5}
    multiline={true}
    rejectResponderTermination={true}
    style={
      Array [
        Object {
          "borderRadius": 5,
          "borderWidth": 2,
          "justifyContent": "flex-end",
          "marginBottom": 10,
          "marginLeft": 10,
          "marginRight": 10,
          "marginTop": 10,
          "paddingBottom": 10,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 10,
        },
        Object {
          "height": "45",
        },
      ]
    }
    underlineColorAndroid="transparent"
  />
</View>
`;

exports[`matches placeholder snapshot 1`] = `
<View>
  <View
    style={
      Object {
        "backgroundColor": "#FFF",
        "left": 25,
        "padding": 5,
        "position": "absolute",
        "top": -5,
        "zIndex": 50,
      }
    }
  >
    <Text />
  </View>
  <TextInput
    allowFontScaling={true}
    borderRadius={5}
    multiline={true}
    placeholder="Name"
    rejectResponderTermination={true}
    style={
      Array [
        Object {
          "borderRadius": 5,
          "borderWidth": 2,
          "justifyContent": "flex-end",
          "marginBottom": 10,
          "marginLeft": 10,
          "marginRight": 10,
          "marginTop": 10,
          "paddingBottom": 10,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 10,
        },
        Object {
          "borderColor": "#FFD14A",
          "borderWidth": 2,
          "height": 45,
          "textAlign": "left",
        },
      ]
    }
    underlineColorAndroid="transparent"
  />
</View>
`;

exports[`matches text input icon snapshot 1`] = `
<View
  borderRadius={5}
  icon={
    <Icon
      color="accent"
      library="MaterialCommunityIcons"
      name="currency-usd"
      size={24}
    />
  }
  style={
    Array [
      Object {
        "borderColor": undefined,
        "borderRadius": 5,
        "borderWidth": undefined,
        "color": undefined,
        "flexDirection": "row",
        "height": "undefinedpx",
        "marginBottom": 10,
        "marginLeft": 10,
        "marginRight": 10,
        "marginTop": 10,
        "width": "undefinedpx",
      },
      Object {
        "borderColor": "#FFD14A",
        "borderWidth": 2,
        "height": 45,
        "textAlign": "left",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderRadius": 5,
          "height": 30,
          "justifyContent": "center",
          "marginLeft": 5,
          "marginTop": 5,
          "paddingBottom": 8,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 8,
          "width": 30,
        },
        Object {
          "backgroundColor": "grey",
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      library="MaterialCommunityIcons"
      style={
        Array [
          Object {
            "color": "#FFD14A",
            "fontSize": 24,
          },
          undefined,
          Object {
            "fontFamily": "Material Design Icons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      󰇁
    </Text>
  </View>
  <TextInput
    allowFontScaling={true}
    multiline={true}
    rejectResponderTermination={true}
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderRadius": 5,
          "color": "white",
          "justifyContent": "center",
          "paddingLeft": 10,
          "paddingTop": 10,
        },
      ]
    }
    underlineColorAndroid="transparent"
  />
</View>
`;

exports[`matches title snapshot 1`] = `
<View>
  <View
    style={
      Object {
        "backgroundColor": "#FFF",
        "left": 25,
        "padding": 5,
        "position": "absolute",
        "top": -5,
        "zIndex": 50,
      }
    }
  >
    <Text>
      Section Name
    </Text>
  </View>
  <TextInput
    allowFontScaling={true}
    borderRadius={5}
    multiline={true}
    rejectResponderTermination={true}
    style={
      Array [
        Object {
          "borderRadius": 5,
          "borderWidth": 2,
          "justifyContent": "flex-end",
          "marginBottom": 10,
          "marginLeft": 10,
          "marginRight": 10,
          "marginTop": 10,
          "paddingBottom": 10,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 10,
        },
        Object {
          "borderColor": "#FFD14A",
          "borderWidth": 2,
          "height": 45,
          "textAlign": "left",
        },
      ]
    }
    title="Section Name"
    underlineColorAndroid="transparent"
  />
</View>
`;
